# FlowLog

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  Dockerfile.cloud  LICENSE.md  MIGRATION.md  QA_REPORT.md  README.md  ROADMAP.md  UPDATES.md  docker-compose.cloud.yml  flowlog.spec  fly.toml  installer.iss  pyproject.toml  requirements-dev.txt  schema.sql
.github/workflows/: ci.yml
cloudflare/: _headers  _redirects
docs/: COMO_RODAR_CLOUD.md
docs/venda/: FAQ.md  FEATURES.md  INSTALL.md
migrations/: v1.0_to_v1.1.sql  v1.1_to_v1.2.sql  v1.2_to_v1.3.sql  v1.5_to_v1.6.sql
scripts/: cadastro_teste.py
src/: __main__.py  audit.py  auth.py  auto_update.py  backup.py  branding.py  cadastrar_usuario.py  cadastro_interativo.py  configurar_alerta.py  csv_export.py  csv_import.py  database.py  editar_fornecedor.py  editar_produto.py  entrada.py  exceptions.py  excluir_fornecedor.py  gerenciar_fornecedor.py  i18n.py  licenca.py  listar_produtos.py  logging_config.py  login.py  main.py  relatorio_curva.py  saida_estoque.py  session.py  setup_wizard.py  teste_insercao.py  utils.py  ver_historico.py
src/api/: __init__.py  auth.py  server.py
src/cloud/: __init__.py  config.py  database.py  main.py
src/cloud/auth/: __init__.py  dependencies.py  google.py  jwt.py  password.py
src/cloud/billing/: __init__.py  plans.py
src/cloud/email/: __init__.py  service.py  templates.py
src/cloud/frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.js
src/cloud/frontend/public/: manifest.json  sw.js
src/cloud/frontend/src/: App.jsx  index.css
src/cloud/frontend/src/components/: BrandingProvider.jsx  GoogleButton.jsx  Layout.jsx
src/cloud/frontend/src/lib/: api.js  sentry.js
src/cloud/frontend/src/pages/: Billing.jsx  Branding.jsx  Dashboard.jsx  Login.jsx  Produtos.jsx  Signup.jsx
src/cloud/models/: __init__.py  audit.py  base.py  branding.py  fatura.py  fornecedor.py  historico.py  produto.py  tenant.py  user.py
src/cloud/observability/: __init__.py  sentry.py
src/cloud/routers/: __init__.py  admin.py  auth.py  billing.py  branding.py  dashboard.py  produtos.py
src/cloud/schemas/: __init__.py  auth.py  v2_1.py
src/repositories/: __init__.py  auditoria_repository.py  base.py  empresa_repository.py  fornecedor_repository.py  historico_repository.py  log_edicoes_repository.py  produto_repository.py  usuario_repository.py
src/services/: __init__.py  auth_service.py  empresa_service.py  estoque_service.py  fornecedor_service.py  historico_service.py  produto_service.py  usuario_service.py
tests/: conftest.py  test_auth.py  test_auto_update.py  test_cloud.py  test_csv.py  test_database.py  test_exceptions.py  test_i18n.py  test_licenca.py  test_repositories.py  test_services.py  test_session.py  test_utils.py  test_v1_6.py  test_v1_6_gaps.py  test_v2_1.py
web/marketing/: index.html
